applications/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-app

spec:
  selector:
    app: demo-app

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
