applications/demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-app
  namespace: demo-app

spec:
  ingressClassName: nginx

  rules:
    - host: demo.nelafree.su

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: demo-app
                port:
                  number: 80
